--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -131,6 +131,7 @@ table {
 custom Styles
 */
 body {
+  background: #293f50;
   color: #888;
   font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, Sans-serif;
 }
@@ -176,7 +177,14 @@ a:hover {
 p a {
   border-bottom: 1px solid #dfe2e5
 }
-
+.primary-header a,
+.primary-footer a{
+  color: #fff;
+}
+.primary-header a:hover,
+.primary-footer a:hover {
+  color: #648880;
+}
 /*
   ========================================
   Grid
@@ -235,7 +243,29 @@ p a {
   clear: both;
   *zoom: 1;
 }
-
+/*
+ROWS
+*/
+.row {
+  background: #fff;
+  min-width: 960px;
+  padding: 66px 0 44px 0;
+}
+.row,
+.row-alt{
+  min-width: 960px;
+}
+.row {
+  background: #fff;
+  padding: 66px 0 44px;
+}
+.row-alt {
+  background: #cbe2c1;
+  background: -webkit-linear-gradient(to right, #a1d3b0, #f6f1d3);
+  background: -moz-linear-gradient(to right, #a1d3b0, #f6f1d3);
+  background: linear-gradient(to right, #a1d3b0, #f6f1d3);
+  padding: 44px 0 22px 0;
+}
 /*
   ========================================
   Typography
@@ -274,12 +304,21 @@ p {
 
 .btn {
   border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
   display: inline-block;
+  font-weight: 400;
+  letter-spacing: .5px;
   margin: 0;
+  text-transform: uppercase;
 }
 .btn-alt {
-  border: 1px solid #dfe2e5;
+  border: 1px solid #fff;
   padding: 10px 30px;
+}
+.btn-alt:hover {
+  background: #fff;
+  color: #648880;
 }
 
 /*
@@ -326,6 +365,7 @@ p {
   line-height: 44px;
   padding: 22px 80px 66px 80px;
   text-align: center;
+  color: #fff;
 }
 .hero h2 {
   font-size: 36px;
